# resm4twi

./: CMakeLists.txt  README.md  h3_i2c.c  h3_i2c.h  resm_iface.c  resm_iface.h  resmgr_twi.c  structure.txt
